src/test/lab5/invalid/Comparison.slac
class C {
}

method main(): Unit = {
  // Error: Incompatible types in equality: C, Int
  println(strOf((new C()) == 20))
}
